--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -54,6 +54,10 @@
             text-align: center;
             cursor: pointer;
         }
+
+        .filled {
+            background-color: #bdbdbd;
+        }
     </style>
 </head>
 
