--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <div class="container">
+    <div id="app" class="container">
         <h1>Welcome to the Sudoku Game!</h1>
-        <p>This is a basic Sudoku game built with Flask and Vanilla JavaScript.</p>
+        <p>This is a basic Sudoku game built with Flask and Vue.js.</p>
+        <router-link to="/sudoku">Start playing Sudoku</router-link>
         <a href="/sudoku">Start playing Sudoku</a>
+        <!-- Vue components will be rendered here -->
     </div>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
