--- a/templates/sudoku.html
+++ b/templates/sudoku.html
@@ -1,3 +1,4 @@
+<!-- templates/sudoku.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -77,7 +78,6 @@
     <div id="timer">Time: 0:00</div>
     <div id="correctStreak">Correct Streak: 0</div>
     <div id="score">Score: 0</div>
-
 
     <script src="{{ url_for('static', filename='js/sudoku.js') }}"></script>
 
