This really went sideways

--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>User Registration</h1>
-    <form method="POST" action="{{ url_for('user.register') }}">
+    <form method="POST" action="{{ url_for('auth.register') }}">
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" required><br>
         <label for="email">Email:</label><br>
