We can register accounts now

--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
         {% endif %}
     {% endwith %}
     
-    <form method="POST" action="{{ url_for('user_bp.login') }}">
+    <form method="POST" action="{{ url_for('user.login') }}">
         <input type="text" name="username" placeholder="Username"><br>
         <input type="password" name="password" placeholder="Password"><br>
         <input type="submit" value="Login">
