--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,8 @@
     <nav>
         <ul>
             <li><a href="{{ url_for('main.index') }}">Home</a></li>
-            <li><a href="{{ url_for('auth.login') }}">Login</a></li>
-            <li><a href="{{ url_for('auth.register') }}">Register</a></li>
+            <li><a href="{{ url_for('user.login') }}">Login</a></li>
+            <li><a href="{{ url_for('user.register') }}">Register</a></li>
             <!-- Add more links as needed -->
         </ul>
     </nav>
